修正 index.ejs 中的 EJS 語法錯誤並更新 .gitignore

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -132,7 +132,8 @@
                     <div
                         class="bg-white rounded-[2rem] p-8 md:p-10 shadow-xl border border-indigo-50 relative overflow-hidden">
                         <div class="relative z-10 prose prose-indigo max-w-none text-slate-600 leading-relaxed text-lg">
-                            <%- summary.replace(/\n/g, '<br>' ) %></div>
+                            <%- summary.replace(/\n/g, '<br>' ) %>
+                        </div>
                     </div>
                 </section>
 
